style.css
#container {
    margin: 10px;
}

button {
    width: 100%;
}

.result {
    display: flex;
    justify-content: space-between;
}

/* Style the button that is used to open and close the collapsible content */
.collapsible {
    cursor: pointer;
    padding: 18px;
    width: 100%;
    border: none;
    text-align: left;
    outline: none;
    font-size: 15px;
    height: auto;
    line-height: 1em;
}

/* Style the collapsible content. Note: hidden by default */
.content {
    padding: 0 18px;
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.2s ease-out;
    position: relative;
    /* display: flex; */
}

/* The search field */
#myInput {
    margin-bottom: 0;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
    position: relative;
    display: inline-block;
    height: 340px;
    /* width: 300px; */
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
    position: absolute;
    min-width: 230px;
    z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {
    background-color: #f1f1f1
}

.show {
    display: block;
}

#search-container {
    display: flex;
}

#userInput {
    
    min-width: 75%;
}

#drop-container {
    height: 300px;
    overflow: auto;
}

#drop-container a {
    background-color: white;
    border-left: 2px solid #d1d1d1;
    border-right: 2px solid #d1d1d1;
}

#drop-container a:last-child {
    border-bottom: 2px solid #d1d1d1;
}

#value-select {
    position: absolute;
    top: 50px;
    width: 230px;
}

#datepicker {
    position: absolute;
    top: 100px;
    width: 230px;
}

